--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -35,11 +35,11 @@
             <div id="login-row" class="row justify-content-center align-items-center">
                 <div id="login-column" class="col-md-6">
                     <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" autocomplete="off" action="" method="post">
+                        <form id="login-form" class="form" autocomplete="off" action="/Account/Login" method="post">
                             <h3 class="text-center text-info">Login</h3>
                             <div class="form-group">
-                                <label for="username" class="text-info">Username:</label><br>
-                                <input type="text" name="username" id="username" placeholder="Username" class="form-control">
+                                <label for="email" class="text-info">Email:</label><br>
+                                <input type="text" name="email" id="email" placeholder="Email" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label for="password" class="text-info">Password:</label><br>
