galiba dördüncü gönderme

--- a/Views/Account/ForgotPassword.cshtml
+++ b/Views/Account/ForgotPassword.cshtml
@@ -35,25 +35,14 @@
             <div id="login-row" class="row justify-content-center align-items-center">
                 <div id="login-column" class="col-md-6">
                     <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" autocomplete="off" action="/Account/Login" method="post">
-                            <h3 class="text-center text-info">Login</h3>
-                            <div class="form-group">
+                        <form id="login-form" class="form" autocomplete="off" action="/Account/SendCode" method="post">
+                            <h3 class="text-center text-info"></h3>
+                            <div class="form-group" data-validate="Valid Email is required: ex@abc.xyz">
                                 <label for="email" class="text-info">Email:</label><br>
                                 <input type="text" name="email" id="email" placeholder="Email" class="form-control">
                             </div>
                             <div class="form-group">
-                                <label for="password" class="text-info">Password:</label><br>
-                                <input type="password" name="password" id="password" placeholder="Password" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-                                <input type="submit" name="submit" class="btn btn-primary btn-md" value="Sign In">
-                            </div>
-                            <div id="register-link" class="text-right">
-                                <a href="/Account/SignUp" class="text-info">Sign Up</a>
-                            </div>
-                            <div id="forgotpassword" class="text-right">
-                                <a href="/Account/ForgotPassword" class="text-info">Forgot password?</a>
+                                <input type="submit" name="submit" class="btn btn-primary btn-md" value="Send">
                             </div>
                         </form>
                     </div>
